samples/_failures_safe/1761093935_17509e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5eb9568f.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_5eb9568f.c:164:9: error: expected expression at end of input
  164 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_5eb9568f.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5eb9568f.c:164:9: error: expected declaration or statement at end of input
